# deepfabric

./: pyproject.toml
deepfabric/: auth.py  cli.py  cloud_upload.py  config.py  metrics.py  schemas.py  utils.py
deepfabric/evaluation/reporters/: cloud_reporter.py
deepfabric/training/: callback.py  metrics_sender.py
tests/unit/: test_cloud_upload.py  test_schemas.py  test_training_callback.py
